fixed a fun spelling mistake in the name of the BOW model file

--- a/text_classification_IMDB_reviews_BOW.ipynb
+++ b/text_classification_IMDB_reviews_BOW.ipynb
@@ -40,19 +40,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training entries: 25000, labels: 25000\n"
+      "Training entries: 25000, labels: 25000\n",
+      "Test entries: 25000 \n"
      ]
     }
    ],
    "source": [
-    "print(\"Training entries: {}, labels: {}\".format(len(train_data), len(train_labels)))\n"
+    "print(\"Training entries: {}, labels: {}\".format(len(train_data), len(train_labels)))\n",
+    "print(\"Test entries: {} \".format(len(test_data)))"
    ]
   },
   {
