adds model with pretrained embeddings

--- a/word_embed.ipynb
+++ b/word_embed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,6 @@
     "import matplotlib.pyplot as plt\n",
     "from keras.models import Sequential\n",
     "from keras import layers\n",
-    "import pydot\n",
-    "from keras.utils import plot_model\n",
     "plt.style.use('ggplot')"
    ]
   },
@@ -108,7 +106,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
