--- a/baseline_bow_logistic_regression.ipynb
+++ b/baseline_bow_logistic_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -47,6 +47,28 @@
     "\n",
     "df = pd.concat(df_list)\n",
     "print(df.iloc[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape yelp  data:  (1000, 3)\n",
+      "shape amazon  data:  (1000, 3)\n",
+      "shape imdb  data:  (748, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for source in df['source'].unique():\n",
+    "    \n",
+    "    df_source = df[df['source'] == source]\n",
+    "    print('shape',source,' data: ', df_source.shape)"
    ]
   },
   {
@@ -265,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   },
   "toc": {
    "base_numbering": 1,
