--- a/baseline_bow_logistic_regression.ipynb
+++ b/baseline_bow_logistic_regression.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd \n",
+    "import util\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression"
@@ -23,30 +24,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sentence    Wow... Loved this place.\n",
-      "label                              1\n",
-      "source                          yelp\n",
-      "Name: 0, dtype: object\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "filepath_dict = {'yelp': './data/yelp_labelled.txt',\n",
-    "                'amazon' : './data/amazon_cells_labelled.txt',\n",
-    "                'imdb' : './data/imdb_labelled.txt'}\n",
-    "df_list = []\n",
-    "for source,path in filepath_dict.items():\n",
-    "    df = pd.read_csv(path, names = ['sentence', 'label'], sep= '\\t')\n",
-    "    df['source'] = source\n",
-    "    df_list.append(df)\n",
-    "\n",
-    "df = pd.concat(df_list)\n",
-    "print(df.iloc[0])"
+    "df = util.get_full_data_frame()"
    ]
   },
   {
@@ -262,13 +242,6 @@
    "source": [
     "#### okay so it makes sense to get 94% on the set that we used 75% of it for but as you can see it do so hot on the next two sets. However, this sets the baseline to beat"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
