--- a/word_embed.ipynb
+++ b/word_embed.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd \n",
+    "import util\n",
     "from sklearn.model_selection import train_test_split\n",
     "from keras.preprocessing.text import Tokenizer\n",
     "from keras.preprocessing.sequence import pad_sequences\n",
@@ -18,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -33,16 +42,7 @@
     }
    ],
    "source": [
-    "filepath_dict = {'yelp': './data/yelp_labelled.txt',\n",
-    "                'amazon' : './data/amazon_cells_labelled.txt',\n",
-    "                'imdb' : './data/imdb_labelled.txt'}\n",
-    "df_list = []\n",
-    "for source,path in filepath_dict.items():\n",
-    "    df = pd.read_csv(path, names = ['sentence', 'label'], sep= '\\t')\n",
-    "    df['source'] = source\n",
-    "    df_list.append(df)\n",
-    "\n",
-    "df = pd.concat(df_list)\n",
+    "df = util.get_full_data_frame()\n",
     "print(df.iloc[0])"
    ]
   },
@@ -188,34 +188,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# NOTE: the model is very clearly overfit. We only had 750 training data points. and used 150 epochs with 10\n",
-    "# data samples\n",
-    "def plot_history(history):\n",
-    "    acc = history.history['acc']\n",
-    "    val_acc = history.history['val_acc']\n",
-    "    loss = history.history['loss']\n",
-    "    val_loss = history.history['val_loss']\n",
-    "    x = range(1, len(acc) + 1)\n",
-    "\n",
-    "    plt.figure(figsize=(12, 5))\n",
-    "    plt.subplot(1, 2, 1)\n",
-    "    plt.plot(x, acc, 'b', label='Training acc')\n",
-    "    plt.plot(x, val_acc, 'r', label='Validation acc')\n",
-    "    plt.title('Training and validation accuracy')\n",
-    "    plt.legend()\n",
-    "    plt.subplot(1, 2, 2)\n",
-    "    plt.plot(x, loss, 'b', label='Training loss')\n",
-    "    plt.plot(x, val_loss, 'r', label='Validation loss')\n",
-    "    plt.title('Training and validation loss')\n",
-    "    plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
@@ -295,7 +267,7 @@
     "print(\"Training Accuracy: {:.4f}\".format(accuracy))\n",
     "loss, accuracy = model.evaluate(X_test, y_test, verbose=False)\n",
     "print(\"Testing Accuracy:  {:.4f}\".format(accuracy))\n",
-    "plot_history(history)"
+    "util.plot_history(history)"
    ]
   },
   {
